Limit the styles that we allow for Krita

This is the same check we have in KisApplication. Otherwise, people
can select styles that we know are broken, like Windows. Also,
compare the style name in lowercase.

BUG:456192
(cherry picked from commit 0ed2f00fc5c30c7c27985fda060a56451fb0550d)